# cuz

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.cuz/intents/: cuz_03e3bd.json  cuz_097849.json  cuz_41c3d8.json  cuz_658d6a.json  cuz_820e5b.json  cuz_a1b2c3.json  cuz_b4cf11.json  cuz_d4e8b1.json  cuz_e3ed76.json  cuz_e7f9a2.json  cuz_eef875.json
.github/workflows/: ci.yml  release.yml
Formula/: cuz.rb
src/: git.rs  intent.rs  main.rs  mcp.rs  prompt.rs
src/commands/: cost.rs  diff.rs  hook.rs  init.rs  log.rs  mcp_serve.rs  mod.rs  parent.rs  rejected.rs  search.rs  setup.rs  show.rs  status.rs  teardown.rs  verify.rs  why.rs
tests/: integration.rs
