[package]
name = "cuz"
version = "0.2.0"
edition = "2021"
description = "Give every piece of code a traceable reason for existing"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
anyhow = "1"
